feat: created all the users, events, attendees, handlers and controller
