# cmd/api/routes.go
@@ -4,7 +4,6 @@ import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
-	"github.com/puremike/event-mgt-api/docs"
 	swaggerfiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
@@ -12,7 +11,6 @@ import (
 func (app *application) routes() http.Handler {
 	g := gin.Default()
 
-	docs.SwaggerInfo.BasePath = "/api/v1"
 	g.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerfiles.Handler))
 
 	v1 := g.Group("/api/v1")
@@ -25,9 +23,23 @@ func (app *application) routes() http.Handler {
 		{
 			events.POST("/", app.createEvent)
 			events.GET("/", app.getAllEvents)
-			events.GET("/:id", app.getEventByID)
+			events.GET("/:id", app.getEventById)
 			events.PUT("/:id", app.updateEvent)
 			events.DELETE("/:id", app.deleteEvent)
+			events.POST("/:id/attendees/:userId", app.addAttendeeToEvent)
+			events.DELETE("/:id/attendees/:userId", app.deleteAttendeeFromEvent)
+			events.GET("/:id/attendees", app.getEventAttendees)
+		}
+
+		users := v1.Group("/auth")
+		{
+			users.POST("/register", app.registerUser)
+			users.GET("/:id", app.getUserById)
+		}
+
+		attendees := v1.Group("/attendees")
+		{
+			attendees.GET("/:userId/events", app.getEventsOfAttendee)
 		}
 	}
 
